# duniter-python-api

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  README.rst  example.py  pyproject.toml  release.sh  requirements.txt  requirements_dev.txt  setup.py  setupy.py  update_copyright_year.sh
_ucoinpy_test/api/: test_bma.py  webserver.py
_ucoinpy_test/api/bma/: test_blockchain.py  test_network.py  test_tx.py  test_wot.py  test_ws.py
_ucoinpy_test/documents/: test_block.py  test_certification.py  test_membership.py  test_peer.py  test_status.py  test_transaction.py
ci/: libsodium.sh
docs/: Makefile  conf.py  documents.rst  duniterpy.api.bma.network.rst  duniterpy.api.bma.rst  duniterpy.api.bma.tx.rst  duniterpy.api.rst  duniterpy.documents.rst  duniterpy.grammars.rst  duniterpy.key.rst  duniterpy.rst  generate.sh  index.rst  make.bat  requirements.txt
docs/_build/doctrees/: duniterpy.api.bma.doctree  duniterpy.api.doctree  duniterpy.doctree  duniterpy.documents.doctree  duniterpy.grammars.doctree  duniterpy.key.doctree  environment.pickle  index.doctree  modules.doctree
duniter_mock_server/: __init__.py  _user_identity.py  block_forge.py  node.py  user.py
duniterpy/: __init__.py  constants.py  helpers.py  localblockchain.py  tools.py
duniterpy/api/: client.py  constants.py  endpoint.py  errors.py
duniterpy/documents/: __init__.py  block.py  block_uid.py  certification.py  constants.py  crc_pubkey.py  document.py  identity.py  membership.py  peer.py  revocation.py  transaction.py
duniterpy/grammars/: output.py
duniterpy/helpers/: blockchain.py  money.py  network.py  ws2p.py
duniterpy/key/: __init__.py  ascii_armor.py  base58.py  constants.py  encryption_key.py  scrypt_params.py  signing_key.py  verifying_key.py
examples/: create_and_publish_identity.py  create_public_key.py  decrypt_binary_encrypted_message.py  listen_ws2p.py  load_ascii_armor_encrypted_message.py  load_binary_encrypted_message.py  load_binary_signed_message.py  load_cleartext_ascii_armor_message.py  load_credentials_file.py  load_encrypted_ascii_armor_message.py  load_local_blockchain.py  load_scuttlebutt_file.py  request_available_nodes.py  request_data.py  request_data_async.py  request_data_elasticsearch.py  request_data_graphql.py  request_graphql.py  request_web_socket_block.py  request_web_socket_ws2p.py  request_ws2p.py  save_and_load_private_key_file.py  save_and_load_private_key_file_ewif.py  save_and_load_private_key_file_pubsec.py  save_and_load_private_key_file_wif.py  save_ascii_armor_encrypted_message.py  save_binary_encrypted_message.py  save_binary_signed_message.py  save_cleartext_ascii_armor_message.py  save_encrypted_ascii_armor_message.py  save_private_keys.py  save_revoke_document.py  send_certification.py  send_identity.py  send_membership.py  send_transaction.py  verify_binary_signed_message.py
mirage/: __init__.py  _cert.py  _ms.py  _ud.py  _user_identity.py  block_forge.py  http.py  node.py  user.py
tests/api/: test_bma.py  test_endpoints.py  webserver.py
tests/documents/: test_block.py  test_certification.py  test_crc_pubkey.py  test_membership.py  test_peer.py  test_transaction.py  test_ws2p_heads.py
tests/grammars/: test_output.py
tests/helpers/: money.py  ws2p.py
tests/key/: test_ascii_armor.py  test_encryption_key.py  test_public_key.py  test_signing_key.py  test_verifying_key.py
ucoinpy/: __init__.py
ucoinpy/api/: errors.py
ucoinpy/documents/: __init__.py  block.py  certification.py  constants.py  document.py  membership.py  peer.py  status.py  transaction.py
ucoinpy/grammars/: output.py
ucoinpy/key/: __init__.py  signing_key.py
(+67 files in other folders)
