[tool]
[tool.poetry]
name = "duniterpy"
version = "0.57.0"
description = "Python library for developers of Duniter clients"
authors = ["inso <insomniak.fr@gmail.com>", "canercandan", "s_b"]
maintainers = ["vit <vit@free.fr>", "Moul <moul@moul.re>"]
readme = "README.md"
license = "GPL-3.0-or-later"
homepage =  ""
repository = "https://git.duniter.org/clients/python/duniterpy"
documentation = "https://clients.duniter.io/python/duniterpy/index.html"
keywords = ["g1", "duniter", "cryptocurrency", "librecurrency", "library"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.dependencies]
python = "^3.5.3"
aiohttp = "^3.6.1"
jsonschema = "^3.0.2"
pypeg2 = "^2.15.2"
attrs = "^19.3.0"
base58 = "^1.0.3"
pylibscrypt = "^1.8.0"
libnacl = "^1.6.1"
pyaes = "^1.6.1"

[tool.poetry.dev-dependencies]
black = { version = "^19.3b0", python = "^3.6" }
mypy = "^0.730"
pylint = "^2.4.2"
sphinx = "^2.3.1"
sphinx_rtd_theme = "^0.4.3"
